finish market buy/sell logic